@@ -1,3 +1,11 @@
+2006-03-22  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/Makefile.am: Add style.css to EXTRA_DIST.
+	* docs/tutorial/gtkmm-tut.xml: TreeView chapter: Add a 
+	sub-section about sorting, mentioning the simple set_sort_column() 
+	functions and TreeModelSort for independent sorting. Based on 
+	code from the example from R. Douglas Barbieri in bug #334791.
+
 2006-03-22  Murray Cumming <murrayc@murrayc.com>
 
 	* gdk/src/dragcontext.hg: Added set_icon_name().
